--- a/Deliv 1 Testing.ipynb
+++ b/Deliv 1 Testing.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "90cd24ce",
+   "execution_count": 1,
+   "id": "e37388f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,8 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "4475df3d",
+   "execution_count": 2,
+   "id": "527a3dc8",
    "metadata": {},
    "outputs": [
     {
@@ -40,8 +40,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "44073fc9",
+   "execution_count": 3,
+   "id": "1a8cff27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url_list = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4399e923",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +61,7 @@
     "    url = 'https://marshemispheres.com/'\n",
     "    browser.visit(url)  \n",
     "    \n",
-    "    for i in range(len(4)):\n",
+    "    for i in range(len(url_list)):\n",
     "\n",
     "        # Find and click the full image button\n",
     "        full_image_elem_1 = browser.find_by_tag('itemLink product-item')[1]\n",
@@ -77,35 +87,25 @@
     "        img_url = f'marshemispheres.com/images/full/{img_url_rel}'\n",
     "\n",
     "        return img_url\n",
+    "    \n",
+    "        print(img_soup)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "a85204e8",
+   "execution_count": 5,
+   "id": "e790bcb7",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'img_soup' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/pc/gbqjc6c53697k0fb7vf83_n40000gn/T/ipykernel_13865/1721931093.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg_soup\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'img_soup' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(img_soup)"
+    "hemi_image(browser)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c12239fe",
+   "id": "c1a5f9e2",
    "metadata": {},
    "outputs": [],
    "source": []
