--- a/Deliv 1 Testing.ipynb
+++ b/Deliv 1 Testing.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e37388f6",
+   "id": "7524fd88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "527a3dc8",
+   "id": "741460b2",
    "metadata": {},
    "outputs": [
     {
@@ -41,63 +41,152 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1a8cff27",
+   "id": "057a53c1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "url_list = []"
+    "url_list = [0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4399e923",
+   "id": "12d5f35e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hemi_image(browser):\n",
-    "\n",
-    "    # Visit URL\n",
-    "    url = 'https://marshemispheres.com/'\n",
-    "    browser.visit(url)  \n",
-    "    \n",
-    "    for i in range(len(url_list)):\n",
-    "\n",
-    "        # Find and click the full image button\n",
-    "        full_image_elem_1 = browser.find_by_tag('itemLink product-item')[1]\n",
-    "        full_image_elem_1.click()\n",
-    "\n",
-    "        # On new page, proceed with opening up full image\n",
-    "        full_image_elem_2 = browser.find_by_tag('_blank')[1]\n",
-    "        full_image_elem_2.click()\n",
-    "\n",
-    "        # Parse the resulting html with soup\n",
-    "        html = browser.html\n",
-    "        img_soup = soup(html, 'html.parser')\n",
-    "\n",
-    "        # Add try/except for error handling\n",
-    "        try:\n",
-    "            # Find the relative image url\n",
-    "            img_url_rel = img_soup.find('img', class_='fancybox-image').get('src')\n",
-    "\n",
-    "        except AttributeError:\n",
-    "            return None\n",
-    "\n",
-    "        # Use the base url to create an absolute url\n",
-    "        img_url = f'marshemispheres.com/images/full/{img_url_rel}'\n",
-    "\n",
-    "        return img_url\n",
-    "    \n",
-    "        print(img_soup)\n",
-    "    "
+    "# Visit URL\n",
+    "url = 'https://marshemispheres.com/'\n",
+    "browser.visit(url)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e790bcb7",
+   "id": "689dc8a4",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Find and click the full image button\n",
+    "full_image_elem_1 = browser.find_by_tag('img.thumb')[1]\n",
+    "full_image_elem_1.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "eed631fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# On new page, proceed with opening up full image\n",
+    "full_image_elem_2 = browser.find_by_text('Sample').first\n",
+    "full_image_elem_2['href']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7447de62",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2ee68778",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'images/usgs_logo_main_2x.png'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a6424ce7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "marshemispheres.com/images/full/images/usgs_logo_main_2x.png\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e4f49bc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Add try/except for error handling\n",
+    "try:\n",
+    "\n",
+    "\n",
+    "except AttributeError:\n",
+    "    return None\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(img_soup)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ba685f22",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ElementDoesNotExist",
+     "evalue": "no elements could be found with tag_name \"itemLink product-item\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages/splinter/element_list.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, index)\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_container\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     40\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mIndexError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mElementDoesNotExist\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/pc/gbqjc6c53697k0fb7vf83_n40000gn/T/ipykernel_21265/542291549.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mhemi_image\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbrowser\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/var/folders/pc/gbqjc6c53697k0fb7vf83_n40000gn/T/ipykernel_21265/3429253294.py\u001b[0m in \u001b[0;36mhemi_image\u001b[0;34m(browser)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0;31m# Find and click the full image button\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m         \u001b[0mfull_image_elem_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbrowser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_by_tag\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'itemLink product-item'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m         \u001b[0mfull_image_elem_1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclick\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages/splinter/element_list.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, index)\u001b[0m\n\u001b[1;32m     41\u001b[0m             raise ElementDoesNotExist(\n\u001b[1;32m     42\u001b[0m                 u'no elements could be found with {0} \"{1}\"'.format(\n\u001b[0;32m---> 43\u001b[0;31m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_by\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     44\u001b[0m                 )\n\u001b[1;32m     45\u001b[0m             )\n",
+      "\u001b[0;31mElementDoesNotExist\u001b[0m: no elements could be found with tag_name \"itemLink product-item\""
+     ]
+    }
+   ],
    "source": [
     "hemi_image(browser)"
    ]
@@ -105,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1a5f9e2",
+   "id": "8ae7a97a",
    "metadata": {},
    "outputs": [],
    "source": []
