--- a/Deliv 1 Testing.ipynb
+++ b/Deliv 1 Testing.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7524fd88",
+   "id": "a8a89ec3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "741460b2",
+   "id": "5737c4f3",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "057a53c1",
+   "id": "6e14a6ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "12d5f35e",
+   "id": "f7a94ec7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "689dc8a4",
+   "id": "24aef4fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "eed631fe",
+   "id": "b91758a8",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7447de62",
+   "id": "4d102d60",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2ee68778",
+   "id": "7b50ff45",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a6424ce7",
+   "id": "7dc12e3a",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e4f49bc0",
+   "id": "33112ca4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,16 +149,22 @@
     "\n",
     "\n",
     "\n",
-    "\n",
+    "# Parse the resulting html with soup\n",
+    "html = browser.html\n",
+    "img_soup = soup(html, 'html.parser')\n",
     "\n",
     "# Add try/except for error handling\n",
     "try:\n",
-    "\n",
+    "    # Find the relative image url\n",
+    "    img_url_rel = img_soup.find('img', class_='fancybox-image').get('src')\n",
     "\n",
     "except AttributeError:\n",
     "    return None\n",
     "\n",
+    "# Use the base url to create an absolute url\n",
+    "img_url = f'marshemispheres.com/images/full/{img_url_rel}'\n",
     "\n",
+    "return img_url\n",
     "\n",
     "print(img_soup)\n"
    ]
@@ -166,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ba685f22",
+   "id": "e36dc58f",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ae7a97a",
+   "id": "5707dbb6",
    "metadata": {},
    "outputs": [],
    "source": []
