--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "9e061b05",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,8 @@
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 99.0.4844\n",
       "Get LATEST chromedriver version for 99.0.4844 google-chrome\n",
-      "Driver [/Users/aspynshaughnessy/.wdm/drivers/chromedriver/mac64/99.0.4844.51/chromedriver] found in cache\n"
+      "Trying to download new driver from https://chromedriver.storage.googleapis.com/99.0.4844.51/chromedriver_mac64.zip\n",
+      "Driver has been saved in cache [/Users/aspynshaughnessy/.wdm/drivers/chromedriver/mac64/99.0.4844.51]\n"
      ]
     }
    ],
@@ -84,7 +85,7 @@
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">Naming a NASA Mars Rover Can Change Your Life</div>"
+       "<div class=\"content_title\">Mars Is Getting a New Robotic Meteorologist</div>"
       ]
      },
      "execution_count": 5,
@@ -105,7 +106,7 @@
     {
      "data": {
       "text/plain": [
-       "'Naming a NASA Mars Rover Can Change Your Life'"
+       "'Mars Is Getting a New Robotic Meteorologist'"
       ]
      },
      "execution_count": 6,
@@ -128,7 +129,7 @@
     {
      "data": {
       "text/plain": [
-       "'Want to name the robotic scientist NASA is sending to Mars in 2020? The student who named Curiosity — the rover currently exploring Mars — will tell you this is an opportunity worth taking.'"
+       "\"Sensors on NASA's Perseverance will help prepare for future human exploration by taking weather measurements and studying dust particles.\""
       ]
      },
      "execution_count": 7,
@@ -234,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "036c3d56",
    "metadata": {},
    "outputs": [
@@ -320,7 +321,7 @@
        "Temperature:                -87 to -5 °C      -88 to 58°C"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "34da7a13",
    "metadata": {},
    "outputs": [
@@ -344,7 +345,7 @@
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,94 +355,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "005199af",
-   "metadata": {},
-   "source": [
-    "# D1: Scrape High-Resolution Mars’ Hemisphere Images and Titles"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "08a161db",
-   "metadata": {},
-   "source": [
-    "### Hemispheres"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "713566ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1. Use browser to visit the URL \n",
-    "url = 'https://marshemispheres.com/'\n",
-    "\n",
-    "browser.visit(url)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "96212bc9",
+   "id": "3c8fcbdb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. Create a list to hold the images and titles.\n",
-    "hemisphere_image_urls = []\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "dab1e775",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
-    "\n",
-    "# for loop to gather urls\n",
-    "\n",
-    "hemispheres = {}\n",
-    "\n",
-    "for i in url_list\n",
-    "\n",
-    "    # Visit URL\n",
-    "    url = 'https://marshemispheres.com/'\n",
-    "    browser.visit(url)\n",
-    "    \n",
-    "    # Find and click the full image button\n",
-    "    full_image_elem_1 = browser.find_by_tag('img.thumb')[1]\n",
-    "    full_image_elem_1.click()\n",
-    "    \n",
-    "    # On new page, proceed with opening up full image\n",
-    "    full_image_elem_2 = browser.find_by_text('Sample').first\n",
-    "    full_image_elem_2['href']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a701365",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 4. Print the list that holds the dictionary of each image url and title.\n",
-    "hemisphere_image_urls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ad7af3c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 5. Quit the browser\n",
     "browser.quit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f1d2abc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
